# change-data-capture-mysql-postgres

./: .gitignore  main.py  pyproject.toml
src/books/: schemas.py
